Fix profile detail header view on mobile

--- a/admin/admin_style.css
+++ b/admin/admin_style.css
@@ -750,6 +750,19 @@ header.scrolled::before {
 	margin: 0 1rem;
 }
 
+/* Media query pour la version mobile du profile detail */
+@media (max-width: 600px) {
+	.profile-detail .flex-btn {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.profile-detail .flex-btn .btn {
+		width: 100%;
+		margin: 10px 0;
+	}
+}
+
 /*-----------banner----------*/
 .banner {
 	background-image: url('../img/banner.jpg');
